Made changes in assets, components

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,3 +20,13 @@
     --primary: var(--blue);
     --secondary: var(--purple);
 }
+
+html {
+    font-size: 16px;
+}
+
+body {
+    background-color: --white;
+    font-family: 'Inter', sans-serif;
+    color: var(--black);
+}
