--- a/components/page/content.css
+++ b/components/page/content.css
@@ -1,5 +1,4 @@
-.container {
-    display: flex;
+.content {
     background-color: var(--grey-1);
     border-block: 1px solid var( --grey-2);
     height: 1036px;
