--- a/components/page/footer.css
+++ b/components/page/footer.css
@@ -17,7 +17,7 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    width: 640px;
+    max-width: 640px;
     font-weight: 400;
     line-height: 1.5;
 }
