Add BEM names for buttons

--- a/components/button/index.html
+++ b/components/button/index.html
@@ -4,23 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="./assets/css/main.css">
+    <link rel="stylesheet" href="../../assets/css/main.css">
     <link rel="stylesheet" href="./button.css">
 
     <title>Button</title>
 </head>
 
 <body>
-    <button class="button button__primary_default">Primary</button>
-    <button class="button button__primary_hovered">Primary</button>
-    <button class="button button__primary_desabled">Primary</button>
+    <button class="button button_primary">Primary</button>
+    <button class="button button_primary disabled">Primary</button>
 
-    <button class="button button__secondary_default">Secondary</button>
-    <button class="button button__secondary_default">Secondary</button>
-    <button class="button button__secondary_defaultd">Secondary</button>
+    <button class="button button__secondary">Secondary</button>
+    <button class="button button__secondary disabled">Secondary</button>
 
-    <button class="button button__alternate_default">Alternate</button>
-    <button class="button button__alternate_hovered">Alternate</button>
-    <button class="button button__alternate_desabled">Alternate</button>
+    <button class="button button__alternate">Alternate</button>
+    <button class="button button__alternate disabled">Alternate</button>
 </body>
 </html>
