--- a/components/button/button.css
+++ b/components/button/button.css
@@ -1,3 +1,12 @@
 .button {
     font-family: Roboto, sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    height: 48px;
+    width: 189px;
+    border-radius: 8px;
+}
+
+.button__primary_default {
+    background-color: var(--blue);
 }
