--- a/components/content/content.css
+++ b/components/content/content.css
@@ -2,5 +2,5 @@
     background-color: var(--grey-1);
     border-block: 1px solid var( --grey-2);
     height: 1036px;
-    width: 100%;
+    margin: 0 auto;
 }
