Made buttons + states

--- a/components/button/button.css
+++ b/components/button/button.css
@@ -3,10 +3,56 @@
     font-weight: 500;
     font-size: 16px;
     height: 48px;
-    width: 189px;
     border-radius: 8px;
+    padding-inline: 65px;
+    transition: opacity 200ms ease-in-out, background 200ms ease-in-out;
 }
 
-.button__primary_default {
-    background-color: var(--blue);
+.button_primary {
+    background-color: var(--primary);
+    color: var(--white);
+    cursor: pointer;
+    
+}
+
+.button_primary:hover {
+    background-color: #2342C0;
+}
+
+.button_primary:disabled {
+    background-color: var(--primary);
+    opacity: 0.5;
+    cursor: not-allowed;
+}
+
+.button_secondary {
+    background-color: var(--secondary);
+    color: var(--white);
+    cursor: pointer;
+}
+
+.button_secondary:hover {
+    background-color: #5028C6;
+}
+
+.button_secondary:disabled {
+    background-color: var(--secondary);
+    opacity: 0.5;
+    cursor: not-allowed;
+}
+
+.button_alternate {
+    border-color: var(--grey-3);
+    color: var(--grey-4);
+    cursor: pointer;
+}
+
+.button_alternate:hover {
+    border-color: var(--grey-4);
+}
+
+.button_alternate:disabled {
+    border-color: var(--grey-3);
+    opacity: 0.5;
+    cursor: not-allowed;
 }
