--- a/components/button/index.html
+++ b/components/button/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,12 +13,13 @@
 
 <body>
     <button class="button button_primary">Primary</button>
-    <button class="button button_primary disabled">Primary</button>
+    <button class="button button_primary" disabled>Primary</button>
 
-    <button class="button button__secondary">Secondary</button>
-    <button class="button button__secondary disabled">Secondary</button>
+    <button class="button button_secondary">Secondary</button>
+    <button class="button button_secondary" disabled>Secondary</button>
 
-    <button class="button button__alternate">Alternate</button>
-    <button class="button button__alternate disabled">Alternate</button>
+    <button class="button button_alternate">Alternate</button>
+    <button class="button button_alternate" disabled>Alternate</button>
 </body>
+
 </html>
