--- a/components/01-button/button.css
+++ b/components/01-button/button.css
@@ -19,12 +19,6 @@
     background-color: #2342C0;
 }
 
-.button_primary:disabled {
-    background-color: var(--primary);
-    opacity: 0.5;
-    cursor: not-allowed;
-}
-
 .button_secondary {
     background-color: var(--secondary);
     color: var(--white);
@@ -33,12 +27,6 @@
 
 .button_secondary:hover {
     background-color: #5028C6;
-}
-
-.button_secondary:disabled {
-    background-color: var(--secondary);
-    opacity: 0.5;
-    cursor: not-allowed;
 }
 
 .button_alternate {
@@ -51,8 +39,7 @@
     border-color: var(--grey-4);
 }
 
-.button_alternate:disabled {
-    border-color: var(--grey-3);
+.button:disabled {
     opacity: 0.5;
     cursor: not-allowed;
 }
