Changed paddins on margins

--- a/components/header/header.css
+++ b/components/header/header.css
@@ -2,8 +2,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 96px;
-    padding-bottom: 77px;
+    margin-top: 96px;
+    margin-bottom: 77px;
     font-size: 3.125rem;
     font-weight: 500;
     line-height: 1.28;
