--- a/components/accordion/index.html
+++ b/components/accordion/index.html
@@ -24,7 +24,7 @@
 
             <details class="accordion__item">
                 <summary class="accordion__summary">Why do programmers prefer dark mode?</summary>
-                <p class="aaccordion__text">Because light attracts bugs!</p>
+                <p class="accordion__text">Because light attracts bugs!</p>
             </details>
         </div>
 
