--- a/components/accordion/accordion.css
+++ b/components/accordion/accordion.css
@@ -2,7 +2,7 @@
     font-style: normal;
     font-weight: 400;
     line-height: 1.5em;
-    max-width: 730px;
+    width: 100%;
 }
 
 .accordion__item {
