--- a/04-lection2/01-histogram/histogram.css
+++ b/04-lection2/01-histogram/histogram.css
@@ -3,14 +3,14 @@
     background-color: var(--white);
     border: 1px solid var(--grey-3);
     border-radius: 8px;
-    padding: 24px;
+    padding: 16px 24px 24px;
     flex-direction: column;
 }
 
 .histogram__header {
     display: flex;
     justify-content: space-between;
-    padding-bottom: 40px;
+    margin-bottom: 39px;
 }
 
 .histogram__info {
@@ -32,6 +32,7 @@
 .histogram__link {
     color: var(--blue);
     text-decoration: none;
+    margin-top: 3px
 }
 
 .histogram__body {
@@ -41,9 +42,7 @@
     gap: 1px;
 }
 
-.bar {
+.histogram__bar {
     background-color: var(--blue);
-    max-height: 100%;
-    flex-basis: 10%;
     flex-grow: 1;
 }
