--- a/components/accordion/accordion.css
+++ b/components/accordion/accordion.css
@@ -7,8 +7,7 @@
 .accordion__item {
     margin-bottom: 8px;
     border: 1px solid var(--grey-3);
-    padding-block: 24px;
-    padding-left: 32px;
+    padding: 24px 32px;
     border-radius: 8px;
     cursor: pointer;
 }
@@ -25,7 +24,7 @@
     display: none;
 }
 
-details[open] > .accordion__text {
+.accordion__item[open] .accordion__text {
     color: var(--grey-4);
     padding-top: 16px;
     padding-bottom: 8px;
