--- a/components/accordion/accordion.css
+++ b/components/accordion/accordion.css
@@ -1,4 +1,6 @@
 .accordion {
+    font-family: 'Inter', sans-serif;
+    font-size: 16px;
     font-style: normal;
     font-weight: 400;
     line-height: 1.5em;
