--- a/04-lection2/01-histogram/histogram.css
+++ b/04-lection2/01-histogram/histogram.css
@@ -19,17 +19,22 @@
 }
 
 .histogram__title {
+    font-family: 'Inter', sans-serif;
+    font-size: 16px;
     opacity: 0.8;
     line-height: 1.5;
     padding-bottom: 6px;
 }
 
 .histogram__value {
+    font-family: 'Inter', sans-serif;
     font-size: 20px;
     line-height: 1.3;
 }
 
 .histogram__link {
+    font-family: 'Inter', sans-serif;
+    font-size: 16px;
     color: var(--blue);
     text-decoration: none;
     margin-top: 3px
