--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,7 @@
 @import url('../../components/header/header.css');
 @import url('../../components/footer/footer.css');
 @import url('../../components/wrapper/wrapper.css');
+@import url('../../components/card/card.css');
 
 :root {
     --white: #ffffff;
