--- a/04-lection2/02-skeleton/skeleton.css
+++ b/04-lection2/02-skeleton/skeleton.css
@@ -34,11 +34,11 @@
     background-color: var(--grey-2);
 }
 
-.skeleton__line_small {
+.skeleton__line-small {
     width: 30%;
 }
 
-.skeleton__line_large {
+.skeleton__line-large {
     width: 50%;
 }
 
@@ -47,14 +47,14 @@
     flex-direction: column;
 }
 
-.skeleton__body_first {
+.skeleton__body-first {
     height: 20px;
     width: 100%;
     background-color: var(--grey-2);
     margin-bottom: 8px;
 }
 
-.skeleton__body_second {
+.skeleton__body-second {
     height: 20px;
     width: 100%;
     background-color: var(--grey-2);
