Have problems with positioning. Didn't finish with titles

--- a/components/content/content.css
+++ b/components/content/content.css
@@ -2,4 +2,7 @@
     background-color: var(--grey-1);
     border-block: 1px solid var( --grey-2);
     height: 1036px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
 }
