Made cards adaptive

--- a/components/header/header.css
+++ b/components/header/header.css
@@ -1,6 +1,6 @@
 .header__title {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     margin-top: 96px;
     margin-bottom: 77px;
