--- a/components/card/card.css
+++ b/components/card/card.css
@@ -10,6 +10,7 @@
     justify-content: center;
     flex-grow: 1;
     width: 350px;
+    height: 367px;
     background-color: var(--white);
     border-radius: 12px;
 }
@@ -18,4 +19,10 @@
     display: flex;
     align-items: flex-end;
     padding-bottom: 30px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 21px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    color: var(--black);
 }
