--- a/components/content/content.css
+++ b/components/content/content.css
@@ -1,8 +1,9 @@
 .content {
-    background-color: var(--grey-1);
-    border-block: 1px solid var( --grey-2);
-    height: 1036px;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    background-color: var(--grey-1);
+    border-block: 1px solid var( --grey-2);
     gap: 30px;
+    padding-block: 68px;
 }
