--- a/components/card/card.css
+++ b/components/card/card.css
@@ -13,6 +13,7 @@
     height: 367px;
     background-color: var(--white);
     border-radius: 12px;
+    box-shadow: 0px 2px 4px 0px rgba(33, 36, 41, 0.05);
 }
 
 .card__title {
