--- a/components/card/card.css
+++ b/components/card/card.css
@@ -7,7 +7,9 @@
 
 .card__item {
     display: flex;
-    justify-content: center;
+    padding: 30px 25px;
+    flex-direction: column;
+    align-items: center;
     flex-grow: 1;
     width: 350px;
     height: 367px;
@@ -16,10 +18,17 @@
     box-shadow: 0px 2px 4px 0px rgba(33, 36, 41, 0.05);
 }
 
+.card__preview {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 .card__title {
     display: flex;
     align-items: flex-end;
-    padding-bottom: 30px;
     font-family: 'Roboto', sans-serif;
     font-size: 21px;
     font-style: normal;
