--- a/05-lection3/03-calendar/calendar.css
+++ b/05-lection3/03-calendar/calendar.css
@@ -1,9 +1,10 @@
 .calendar {
-    display: grid;
-    grid-template-rows: repeat(7, 1fr);
+    display: flex;
+    flex-direction: column;
     border: 1px solid var(--grey-3);
     border-radius: 8px;
     padding: 30px 30px 40px 30px;
+    max-width: 500px;
 }
 
 .calendar__header {
@@ -29,7 +30,13 @@
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     text-align: center;
+    margin-bottom: 24px;
+}
+
+.calendar__day {
     color: #90A0B7;
+    font-size: 14px;
+    line-height: 1.43;
 }
 
 .calendar__dates {
@@ -37,4 +44,24 @@
     grid-template-columns: repeat(7,1fr);
     grid-auto-rows: 1fr;
     text-align: center;
+    } 
+
+.calendar__day,
+.calendar__date {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 5px;
+    font-family: 'Inter', sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    
+}
+
+    .calendar__date {
+    padding-block: 16px;
+    color: #334D6E;
+    line-height: 1.25;
+    /* padding-inline: 10px; */
 }
