--- a/05-lection3/03-calendar/calendar.css
+++ b/05-lection3/03-calendar/calendar.css
@@ -55,8 +55,7 @@
     font-family: 'Inter', sans-serif;
     font-size: 16px;
     font-style: normal;
-    font-weight: 400;
-    
+    font-weight: 400; 
 }
 
     .calendar__date {
@@ -64,4 +63,13 @@
     color: #334D6E;
     line-height: 1.25;
     /* padding-inline: 10px; */
+}
+
+.calendar__date_blue {
+    background-color: var(--blue);
+    color: var(--white);
+}
+
+.calendar__date_light-blue {
+    background-color: rgba(160, 177, 245, 0.2);
 }
