--- a/05-lection3/03-calendar/calendar.css
+++ b/05-lection3/03-calendar/calendar.css
@@ -3,8 +3,8 @@
     flex-direction: column;
     border: 1px solid var(--grey-3);
     border-radius: 8px;
-    padding: 30px 30px 40px 30px;
-    max-width: 500px;
+    padding: 28px 26px 40px 32px;
+    max-width: 304px;
 }
 
 .calendar__header {
@@ -22,50 +22,47 @@
     line-height: 1.2;
 }
 
-.calendar__days {
+.calendar__item {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
-    text-align: center;
-    margin-bottom: 24px;
-}
-
-.calendar__day {
-    color: #90A0B7;
-    font-size: 14px;
-    line-height: 1.43;
-}
-
-.calendar__dates {
-    display: grid;
-    grid-template-columns: repeat(7,1fr);
     grid-auto-rows: 1fr;
-    text-align: center;
-    } 
+}
 
-.calendar__day,
-.calendar__date {
+.calendar__item_day,
+.calendar__item_date {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 5px;
     font-family: 'Inter', sans-serif;
     font-size: 16px;
     font-style: normal;
     font-weight: 400; 
+    aspect-ratio: 1 / 1;
+    width: 100%;
+    border: 1px solid transparent;
 }
 
-    .calendar__date {
-    padding-block: 16px;
+.calendar__item_day {
+    color: #90A0B7;
+    font-size: 14px;
+    line-height: 1.43;
+    margin-bottom: 10px;
+}
+
+    .calendar__item_date {
     color: #334D6E;
     line-height: 1.25;
-    /* padding-inline: 10px; */
 }
 
-.calendar__date_blue {
+.calendar__item_blue {
     background-color: var(--blue);
     color: var(--white);
 }
 
-.calendar__date_light-blue {
+.calendar__item_light-blue {
     background-color: rgba(160, 177, 245, 0.2);
+}
+
+:nth-child(-n+5) {
+    /* padding-bottom: 24px; */
 }
