--- a/05-lection3/03-calendar/calendar.css
+++ b/05-lection3/03-calendar/calendar.css
@@ -33,7 +33,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    font-family: 'Inter', sans-serif;
     font-size: 16px;
     font-style: normal;
     font-weight: 400; 
@@ -43,15 +42,17 @@
 }
 
 .calendar__item_day {
+    font-family: 'Inter', sans-serif;
     color: #90A0B7;
     font-size: 14px;
     line-height: 1.43;
-    margin-bottom: 10px;
 }
 
-    .calendar__item_date {
+.calendar__item_date {
+    font-family: 'Source Sans 3', serif;
     color: #334D6E;
     line-height: 1.25;
+
 }
 
 .calendar__item_blue {
@@ -61,8 +62,4 @@
 
 .calendar__item_light-blue {
     background-color: rgba(160, 177, 245, 0.2);
-}
-
-:nth-child(-n+5) {
-    /* padding-bottom: 24px; */
 }
