--- a/05-lection3/01-tooltip/tooltip.css
+++ b/05-lection3/01-tooltip/tooltip.css
@@ -36,9 +36,9 @@
     font-size: 16px;
     line-height: 1.5;
     text-align: center;
-    color: #DDE2E5;
+    color: var(--grey-2);
     padding: 13px 21px 8px;
-    background-color: var(--black);
+    background-color: var(--blue);
     border-radius: 10px;
     white-space: nowrap;
 
@@ -50,7 +50,7 @@
     content: '';
     position: absolute;
     border: 10px solid transparent;
-    border-top-color: var(--black);
+    border-top-color: var(--blue);
     top: 100%;
     left: 50%;
     transform: translateX(-50%);
