--- a/components/footer/footer.css
+++ b/components/footer/footer.css
@@ -19,3 +19,14 @@
     font-weight: 400;
     line-height: 1.5;
 }
+
+.footer__caption {
+    color: var(--grey-3, #ACB5BD);
+    font-family: Inter, sans-serif;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 500;
+    line-height:1.5;
+    letter-spacing: 0.48px;
+    text-transform: uppercase;
+}
