--- a/05-lection3/03-calendar/calendar.css
+++ b/05-lection3/03-calendar/calendar.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     border: 1px solid var(--grey-3);
     border-radius: 8px;
-    padding: 28px 26px 40px 32px;
+    padding: 28px 26px 32px;
     max-width: 304px;
 }
 
@@ -22,7 +22,7 @@
     line-height: 1.2;
 }
 
-.calendar__item {
+.calendar__items {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     grid-auto-rows: 1fr;
