--- a/05-lection3/03-calendar/calendar.css
+++ b/05-lection3/03-calendar/calendar.css
@@ -26,12 +26,12 @@
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     grid-auto-rows: 1fr;
+    align-items: start;
 }
 
 .calendar__item_day,
 .calendar__item_date {
     display: flex;
-    align-items: center;
     justify-content: center;
     font-size: 16px;
     font-style: normal;
@@ -52,7 +52,7 @@
     font-family: 'Source Sans 3', serif;
     color: #334D6E;
     line-height: 1.25;
-
+    align-items: center;
 }
 
 .calendar__item_blue {
