Made template description as component

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,6 +11,7 @@
 @import url('../../components/card/card.css');
 @import url('../../pages/template.css');
 @import url('../../components/sidebar/sidebar.css');
+@import url('../../components/template-description/template-description.css');
 
 :root {
     --white: #ffffff;
