added histogram in inner-page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,6 +12,7 @@
 @import url('../../pages/template.css');
 @import url('../../components/sidebar/sidebar.css');
 @import url('../../components/template-description/template-description.css');
+@import url('../../04-lection2/01-histogram/histogram.css');
 
 :root {
     --white: #ffffff;
