--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,6 +13,9 @@
 @import url('../../components/sidebar/sidebar.css');
 @import url('../../components/template-description/template-description.css');
 @import url('../../04-lection2/01-histogram/histogram.css');
+@import url('../../05-lection3/01-tooltip/tooltip.css');
+@import url('../../05-lection3/03-calendar/calendar.css');
+@import url('../../05-lection3/02-modal/modal.css');
 
 :root {
     --white: #ffffff;
