--- a/components/card/card.css
+++ b/components/card/card.css
@@ -3,17 +3,21 @@
     padding: 30px 25px;
     flex-direction: column;
     align-items: center;
-    width: 350px;
-    height: 367px;
     background-color: var(--white);
     border-radius: 12px;
     box-shadow: 0px 2px 4px 0px rgba(33, 36, 41, 0.05);
+    flex: 1 1 calc(33.333% - 30px);
+    /* min-width: 350px; */
+    width: auto;
+    min-height: 367px;
+    height: auto;
 }
 
 .card__preview {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     width: 100%;
     flex-grow: 1;
 }
@@ -27,4 +31,23 @@
     font-weight: 500;
     line-height: normal;
     color: var(--black);
+    padding-top: 20px;
+}
+
+@media screen and (max-width: 1024px) {
+    .card {
+        flex: 1 1 calc(50% - 20px);
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .card {
+        flex: 1 1 calc(100% - 10px);
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .card {
+        flex: 1 1 100%;
+    }
 }
