Changed max- on min-width

--- a/06-lection4/02-background-image/background-image.css
+++ b/06-lection4/02-background-image/background-image.css
@@ -7,19 +7,19 @@
     background-size: cover;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
     .background {
         background-image: url(./public/forest_768.jpg);
     }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 1024px) {
     .background {
         background-image: url(./public/forest_1024.jpg);
     }
 }
 
-@media screen and (max-width: 2560px) {
+@media screen and (min-width: 2560px) {
     .background {
         background-image: url(./public/forest_2560.jpg);
     }
