--- a/components/header/header.css
+++ b/components/header/header.css
@@ -16,3 +16,24 @@
 .header_transparent {
     background-color: transparent;
 }
+
+.header__logo {
+    padding-top: 24px;
+}
+
+@media screen and (max-width: 768px) {
+
+    .header__logo {
+        padding-top: 16px;
+        margin: 0 auto;
+    }
+}
+
+@media screen and (max-width: 480px) {
+
+    .header__title {
+        font-size: 1.75rem;
+        font-weight: 400;
+        line-height: 1.35;
+    }
+}
