--- a/components/template-description/template-description.css
+++ b/components/template-description/template-description.css
@@ -4,3 +4,10 @@
     box-shadow: 0px 2px 4px 0px rgba(33, 36, 41, 0.05);
     padding: 32px 48px;
 }
+
+@media screen and (max-width: 768px) {
+    .template__component-description {
+        width: 100%;
+        padding: 32px 16px;
+    }
+}
