--- a/04-lection2/01-histogram/histogram.css
+++ b/04-lection2/01-histogram/histogram.css
@@ -25,12 +25,14 @@
     opacity: 0.8;
     line-height: 1.5;
     padding-bottom: 6px;
+    color: var(--black);
 }
 
 .histogram__value {
     font-family: 'Inter', sans-serif;
     font-size: 20px;
     line-height: 1.3;
+    color: var(--black);
 }
 
 .histogram__link {
