--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,6 +16,7 @@
 @import url('../../05-lection3/01-tooltip/tooltip.css');
 @import url('../../05-lection3/03-calendar/calendar.css');
 @import url('../../05-lection3/02-modal/modal.css');
+@import url('../../06-lection4/01-avatar/avatar.css');
 
 :root {
     --white: #ffffff;
