--- a/07-lection5/01-checkbox/checkbox.css
+++ b/07-lection5/01-checkbox/checkbox.css
@@ -1,6 +1,7 @@
 .checkbox {
     display: inline-block;
     position: relative;
+    vertical-align: middle; /* параметр позволяет выравнить иконку по вертикали */
 }
 
 .checkbox__input {
@@ -69,8 +70,3 @@
 .checkbox__input:disabled ~ .checkbox__state {
     cursor: not-allowed;
 }
-
-/* Это вот костыль, который помог включая кросс браузерность.
-.checkbox__input:checked ~ .checkbox__state .checkbox__square{
-    transform: translateY(-2px);
-} */
