--- a/07-lection5/01-checkbox/checkbox.css
+++ b/07-lection5/01-checkbox/checkbox.css
@@ -4,6 +4,12 @@
     vertical-align: middle; /* параметр позволяет выравнить иконку по вертикали */
 }
 
+.checkbox__wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
 .checkbox__input {
     position: absolute;
     left: -100vh;
