--- a/07-lection5/02-radio/radio.css
+++ b/07-lection5/02-radio/radio.css
@@ -1,11 +1,6 @@
 .radio {
     display: inline-flex;
-}
-
-.radio__wrapper {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
+    vertical-align: middle;
 }
 
 .radio__state {
