--- a/07-lection5/04-input/input.css
+++ b/07-lection5/04-input/input.css
@@ -26,6 +26,7 @@
     font-style: normal;
     font-weight: 400;
     line-height: 1.3;
+    width: 100%;
 }
 
 .input__field::placeholder {
@@ -36,4 +37,39 @@
     border-color: var(--blue, #374FC7);
     outline: none;
     color: var(--grey-4, #495057);
+}
+
+.input-wrapper {
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+.input__icon {
+    fill: none;
+    color: var(--blue, #374FC7);
+    position: absolute;
+    right: 16px;
+}
+
+.input__field_success::placeholder {
+    color: var(--grey-4,#495057);
+}
+
+.input__field_invalid {
+    border-color: var(--error, #F03D3E);
+}
+
+.input__field_invalid::placeholder {
+    color: var(--grey-4,#495057);;
+}
+
+.input__field_invalid ~ .input__icon {
+    color: var(--error, #F03D3E);
+}
+
+.input__field_disabled {
+    background-color: var(--grey-1, #F8F9FA);
+    border-color: var(--grey-2, #DDE2E5);
+    color: var(--grey-3, #ACB5BD);
 }
