--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,6 +17,7 @@
 @import url('../../05-lection3/03-calendar/calendar.css');
 @import url('../../05-lection3/02-modal/modal.css');
 @import url('../../06-lection4/01-avatar/avatar.css');
+@import url('../../components/tabs/tabs.css');
 
 :root {
     --white: #ffffff;
