--- a/components/footer/footer.css
+++ b/components/footer/footer.css
@@ -14,7 +14,7 @@
 }
 
 .footer__text {
-    text-align: center;
+    margin: 0 auto;
     max-width: 640px;
     font-weight: 400;
     line-height: 1.5;
