Added checkboxex in the card

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,6 +18,10 @@
 @import url('../../05-lection3/02-modal/modal.css');
 @import url('../../06-lection4/01-avatar/avatar.css');
 @import url('../../components/tabs/tabs.css');
+@import url('../../07-lection5/01-checkbox/checkbox.css');
+@import url('../../07-lection5/02-radio/radio.css');
+@import url('../../07-lection5/03-toggler/toggler.css');
+@import url('../../07-lection5/04-input/input.css');
 
 :root {
     --white: #ffffff;
