--- a/05-lection3/02-modal/modal.css
+++ b/05-lection3/02-modal/modal.css
@@ -48,5 +48,21 @@ font-family: Inter;
 font-size: 16px;
 font-style: normal;
 font-weight: 400;
-line-height: 24px; /* 150% */
+line-height: 24px;
+text-overflow: clip;
+white-space: nowrap;
+overflow: hidden;
+}
+
+.modal__content_preview {
+    position: relative;
+    transform: none;
+    flex: 1 0 auto;
+    max-width: 200px;
+    top: 0;
+    left: 0;
+    border: 1px solid var(--grey-3);
+    pointer-events: none;
+    padding: 1em;
+    max-height: 200px;
 }
